--- a/QuShuiXuKeProject/8.Src/gwlman/gwlman/gwlman.csproj
+++ b/QuShuiXuKeProject/8.Src/gwlman/gwlman/gwlman.csproj
@@ -48,6 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmGwlItem.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmGwlItem.Designer.cs">
+      <DependentUpon>frmGwlItem.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -56,6 +62,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmGwlItem.resx">
+      <DependentUpon>frmGwlItem.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
       <SubType>Designer</SubType>
