--- a/QuShuiXuKeProject/8.Src/gwlman/gwlman/gwlman.csproj
+++ b/QuShuiXuKeProject/8.Src/gwlman/gwlman/gwlman.csproj
@@ -60,6 +60,12 @@
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmWellItem.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmWellItem.Designer.cs">
+      <DependentUpon>frmWellItem.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmGwlItem.resx">
@@ -68,6 +74,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmWellItem.resx">
+      <DependentUpon>frmWellItem.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
