--- a/QuShuiXuKeProject/8.Src/gwlman/gwlDB/app.config
+++ b/QuShuiXuKeProject/8.Src/gwlman/gwlDB/app.config
@@ -6,5 +6,8 @@
         <add name="gwlDB.Properties.Settings.jsbGwlManDBConnectionString"
             connectionString="Data Source=.;Initial Catalog=jsbGwlManDB;User ID=sa"
             providerName="System.Data.SqlClient" />
+        <add name="gwlDB.Properties.Settings.jsbGwlManDBConnectionString1"
+            connectionString="Data Source=.;Initial Catalog=jsbGwlManDB;User ID=sa;Password=sa"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
