--- a/QuShuiXuKeProject/8.Src/gwlman/gwlman/gwlman.csproj
+++ b/QuShuiXuKeProject/8.Src/gwlman/gwlman/gwlman.csproj
@@ -49,8 +49,13 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="Xdgk.Common, Version=0.9.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\GlobalAssembly\Xdgk.Common\Xdgk.Common.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
     <Compile Include="DBFactory.cs" />
     <Compile Include="Forms\frmGwlItem.cs">
       <SubType>Form</SubType>
