--- a/QuShuiXuKeProject/8.Src/gwlman/gwlman/gwlman.csproj
+++ b/QuShuiXuKeProject/8.Src/gwlman/gwlman/gwlman.csproj
@@ -75,6 +75,12 @@
     <Compile Include="Forms\frmWellItem.Designer.cs">
       <DependentUpon>frmWellItem.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmUCConditionTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmUCConditionTest.Designer.cs">
+      <DependentUpon>frmUCConditionTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\frmGwlItem.resx">
@@ -89,9 +95,17 @@
       <DependentUpon>frmWellItem.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmUCConditionTest.resx">
+      <DependentUpon>frmUCConditionTest.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UCCondition.resx">
+      <DependentUpon>UCCondition.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
@@ -108,6 +122,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="UCCondition.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UCCondition.Designer.cs">
+      <DependentUpon>UCCondition.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
