add search condition

--- a/QuShuiXuKeProject/8.Src/gwlman/gwlDB/gwlDB.csproj
+++ b/QuShuiXuKeProject/8.Src/gwlman/gwlDB/gwlDB.csproj
@@ -46,6 +46,10 @@
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Xdgk.Common, Version=0.9.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\GlobalAssembly\Xdgk.Common\Xdgk.Common.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DB.designer.cs">
