--- a/QuShuiXuKeProject/8.Src/gwlman/gwlman/App.config
+++ b/QuShuiXuKeProject/8.Src/gwlman/gwlman/App.config
@@ -1,3 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <appSettings >
+    <add key="Text" value ="取水许可管理"/>
+  </appSettings>
 </configuration>
